# rufus-web-extractor

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  gradio_app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
rufus/: api.py  client.py  main.py
rufus/config/: __init__.py  config.yaml  config_loader.py
rufus/helpers/: logger.py
rufus/lib/: crawler.py  search.py
rufus/lib/agents/: relevance_check.py
rufus/lib/rag/: rag.py  vectordb_creation.py
tests/: test_ai_processor.py  test_client.py  test_crawler.py
