[metadata]
name = rufus-web-extractor
description = An AI-powered web data extraction tool for RAG systems
long_description = file: README.md
long_description_content_type = text/markdown
author = Butchi Venkatesh Adari
author_email = butchivenkatesh.a@gmail.com
url = https://github.com/VenkateshRoshan/rufus-web-extractor
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.2
    openai>=1.3.0
    selenium>=4.15.0
    webdriver-manager>=4.0.0
    python-dotenv>=1.0.0
    robotexclusionrulesparser
    colorama
    langchain
    langchain-openai
    langchain_community
    chromadb
    sentence_transformers
    python-dotenv
    pyyaml
    ollama

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-cov>=4.1.0
    mypy>=1.3.0
    black>=23.3.0
    isort>=5.12.0

test =
    pytest>=7.4.3
    pytest-cov>=4.1.0

[options.entry_points]
console_scripts =
    rufus-web-extractor = rufus.main:main
    rufus-api = rufus.api:main
    rufus-gradio = rufus.gradio_app:main

[options.packages.find]
exclude = 
    tests*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black
multi_line_output = 3